 cnp-mitre-egress-deny-external-communication-from-mysql-pod-t-6sp9s.yaml
---
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: cnp-mitre-egress-deny-external-communication-from-mysql-pod-jvkctdt
  namespace: explorer
spec:
  description: "To block all external world communication from mysql pod and limit it to specific pods"
  endpointSelector:
    matchLabels:
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/name: mysql
      controller-revision-hash: mysql-7d648d884
      helm.sh/chart: mysql-8.6.1
      statefulset.kubernetes.io/pod-name: mysql-0
      app.kubernetes.io/component: primary
      app.kubernetes.io/instance: mysql
  egress:
  - toEndpoints:
    - matchLabels:
        app: frontend   #change app: frontend to match your label
